[gd_scene load_steps=4 format=3 uid="uid://ctqrqn7gqc673"]

[ext_resource type="Script" path="res://player/ship.gd" id="1_bbk5x"]

[sub_resource type="SphereMesh" id="SphereMesh_akt6a"]

[sub_resource type="SphereShape3D" id="SphereShape3D_cpvxp"]
radius = 0.067

[node name="ship" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.255699, 0)
script = ExtResource("1_bbk5x")

[node name="mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, -0.406316)
mesh = SubResource("SphereMesh_akt6a")

[node name="ray" type="RayCast3D" parent="mesh"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0.581884)
target_position = Vector3(2.08165e-12, 2.08165e-12, -0.2)
collision_mask = 4

[node name="ray2" type="RayCast3D" parent="mesh"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, -0.000700951)
target_position = Vector3(0.1, 2.08165e-12, 2.08165e-12)
collision_mask = 4

[node name="ray3" type="RayCast3D" parent="mesh"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, -0.0720415)
target_position = Vector3(-0.1, 2.08165e-12, 2.08165e-12)
collision_mask = 4

[node name="ray4" type="RayCast3D" parent="mesh"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, -0.0657153)
target_position = Vector3(2.08165e-12, -0.1, 2.08165e-12)
collision_mask = 4

[node name="ray5" type="RayCast3D" parent="mesh"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, -0.0657153)
target_position = Vector3(2.08165e-12, 0.1, 2.08165e-12)
collision_mask = 4

[node name="Area3D" type="Area3D" parent="mesh"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
collision_mask = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="mesh/Area3D"]
shape = SubResource("SphereShape3D_cpvxp")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.964401, 0.264445, 0, -0.264445, 0.964401, 0, 0.113297, -0.144763)
light_color = Color(0.956863, 1, 0.952941, 1)
light_energy = 1.725
light_indirect_energy = 6.12
light_volumetric_fog_energy = 7.36
light_size = 0.541
spot_range = 20.562
spot_attenuation = 0.0625001
spot_angle = 35.7366
spot_angle_attenuation = 39.3966

[connection signal="body_entered" from="mesh/Area3D" to="." method="_on_area_3d_body_entered"]
